Fix component image clipping in Firefox.

--- a/site/stylesheets/homepage.css
+++ b/site/stylesheets/homepage.css
@@ -1,12 +1,12 @@
 
 .component-image {
-    overflow: clip;
+    overflow: hidden;
     width: 100%;
     height: 100%;
 }
 
 .component-image-inner {
-    overflow: clip;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
